Update README.md
Added an instruction to set MAVEN_OPTS